Web Inspector: RuntimeAgent.evaluateOn should not require "return X;" syntax. https://bugs.webkit.org/show_bug.cgi?id=64691

Reviewed by Yury Semikhatsky.

Source/WebCore:

I'm introducing callFunctionOn that receives function declaration in order
to make call site syntax clear.

Test: inspector/runtime/runtime-callFunctionOn.html

* inspector/InjectedScript.cpp:
(WebCore::InjectedScript::callFunctionOn):
* inspector/InjectedScript.h:
* inspector/InjectedScriptSource.js:
(.):
* inspector/Inspector.json:
* inspector/InspectorRuntimeAgent.cpp:
(WebCore::InspectorRuntimeAgent::callFunctionOn):
* inspector/InspectorRuntimeAgent.h:
* inspector/front-end/ElementsTreeOutline.js:
(WebInspector.ElementsTreeElement.prototype._createTooltipForNode.resolvedNode.dimensions):
(WebInspector.ElementsTreeElement.prototype._createTooltipForNode.resolvedNode):
(WebInspector.ElementsTreeElement.prototype._createTooltipForNode):
* inspector/front-end/PropertiesSidebarPane.js:
(WebInspector.PropertiesSidebarPane.prototype.update.nodeResolved.protoList):
(WebInspector.PropertiesSidebarPane.prototype.update.nodeResolved):
* inspector/front-end/RemoteObject.js:
(WebInspector.RemoteObject.prototype.callFunction):

LayoutTests:

* inspector/protocol/runtime-agent-expected.txt:
* inspector/protocol/runtime-agent.html:
* inspector/runtime/runtime-callFunctionOn-expected.txt: Added.
* inspector/runtime/runtime-callFunctionOn.html: Added.

Canonical link: https://commits.webkit.org/80692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91472 268f45cc-cd09-0410-ab3c-d52691b4dbfc